--- a/config/boards/shields/dotkeeb/dotkeeb.dtsi
+++ b/config/boards/shields/dotkeeb/dotkeeb.dtsi
@@ -2,6 +2,7 @@
 
 / {
     chosen {
+        zephyr,display = &oled;
         zmk,kscan = &kscan0;
         zmk,matrix_transform = &default_transform;
     };
@@ -40,7 +41,7 @@ RC(2,0) RC(2,1) RC(2,2) RC(2,3) RC(2,4) RC(2,5)                 RC(2,6) RC(2,7) 
     };
 };
 
-&pro_micro_i2c {
+&i2c0 {
 	status = "okay";
 
 	oled: ssd1306@3c {
