--- a/build.yaml
+++ b/build.yaml
@@ -14,6 +14,6 @@
 ---
 include:
   - board: nice_nano_v2
-    shield: dotkeeb_left nice_view nice_view_adapter
+    shield: dotkeeb_left nice_view_adapter nice_view 
   - board: nice_nano_v2
-    shield: dotkeeb_right nice_view nice_view_adapter
+    shield: dotkeeb_right nice_view_adapter nice_view
