--- a/config/boards/shields/dotkeeb/dotkeeb_right.conf
+++ b/config/boards/shields/dotkeeb/dotkeeb_right.conf
@@ -1,3 +1,5 @@
 CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_DISPLAY=y
-CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+# Turn on logging, and set ZMK logging to debug output
+CONFIG_ZMK_USB_LOGGING=y
